notifications color updated

--- a/views/add_client.ejs
+++ b/views/add_client.ejs
@@ -6,13 +6,13 @@
     <style>
     .alert {
         padding: 20px;
-        background-color: #f2edbe;
-        color: black;
+        background-color: #3d9796;
+        color: white;
     }
 
     .closebtn {
         margin-left: 15px;
-        color: black;
+        color: white;
         font-weight: bold;
         float: right;
         font-size: 22px;
