--- a/views/search_movie.ejs
+++ b/views/search_movie.ejs
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/search_movie.css" type="text/css">
-        <style>
+    <style>
     .alert {
         padding: 20px;
-        background-color: #f2edbe;
-        color: black;
+        background-color: #3d9796;
+        color: white;
     }
 
     .closebtn {
         margin-left: 15px;
-        color: black;
+        color: white;
         font-weight: bold;
         float: right;
         font-size: 22px;
