--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -28,10 +28,15 @@
 </head>
 
 <body>
-    <% if (message) { %>
+    <% if (message!="m") { %>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
             <h2><%= message %></h2>
+        </div>
+    <% } else if (error!="e") { %>
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+            <h2><%= error %></h2>
         </div>
     <% } %>
 
