--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -50,7 +50,7 @@
         </form> 
     </article>  
 
-    <%if (error!="e") { %>
+    <%if (locals.error) { %>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
             <h1><%= error%></h1>
