--- a/public/css/search_movie.css
+++ b/public/css/search_movie.css
@@ -54,6 +54,7 @@ select{
     width: 100px;
     height: 27px;
     font-size: 13px;
+    border-radius: 25px;
     font-family: BalsamiqSansBold;
 }
 
@@ -83,6 +84,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_2{
@@ -96,6 +98,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_3{
@@ -109,6 +112,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_4{
@@ -122,6 +126,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_5{
@@ -135,6 +140,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_6{
@@ -148,6 +154,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_7{
@@ -161,6 +168,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 #field_8{
@@ -174,6 +182,7 @@ select{
     text-align: left;
     font-size: 13px;
     font-family: BalsamiqSansBold;
+    border-radius: 10px;
 }
 
 div.scroll { 
