--- a/views/search_movie.ejs
+++ b/views/search_movie.ejs
@@ -82,16 +82,18 @@
             <% for (let i = 1 ; i <= 10 ; i++) { %>
             <div class="clearfix">
             <% if(locals.moviesTitle && locals.moviesTitle.length > (i-1) ){  %>
-            <form action="<%= "/movies/add/" + moviesTitle[i-1].Movie_id_m %>" method="get">
-            <input type="image" class="cartBtn"src="/images/icons/cart.png" width="25px" height="25px" top="10">
+            
+            <form action="/admin/movies/addcart" method="post">
+            <input id="searchBy" name="searchBy" type="hidden"value="<%= searchBy %>">
+            <input type="image" id="movieId"name="movieId"class="cartBtn"src="/images/icons/cart.png" width="25px" height="25px" top="10"value="<%= moviesTitle[i-1].Movie_id_m %>" >
             </form>
-            <form action="<%= "/movies/edit/" + moviesTitle[i-1].Movie_id_m %>" method="get">
-
+            <form action="/admin/movies/edit" method="post">
+                
                 <input type="text" id="<%= ("field_" + i) %>" value="<%= "   id: " + moviesTitle[i-1].Movie_id_m + ", " + moviesTitle[i-1].movie_name +", stock: " + moviesTitle[i-1]['Movie.stock'] %>" name="<%= ("field_" + i) %>" class="field left" readonly>
-                <input type="image" id="view" name="view" src="/images/icons/view_edit.png" width="25px" height="25px"
-                    top="10">
+                <input type="image" id="movieId"name="movieId" src="/images/icons/view_edit.png" width="25px" height="25px"
+                value="<%= moviesTitle[i-1].Movie_id_m %>" top="10">
             <% } else{ %>
-                <form action="/movies/edit/" method="get">
+                <form action="/admin/movies/edit" method="post">
                 <input type="text" id="<%= ("field_" + i) %>" name="<%= ("field_" + i) %>" class="field left" readonly>
             <% } %>
             </form>
