--- a/views/edit_movie.ejs
+++ b/views/edit_movie.ejs
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <% if (message) { %>
+    <% if (locals.message) { %>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
             <h2><%= message %></h2>
