--- a/views/cart_summary.ejs
+++ b/views/cart_summary.ejs
@@ -28,7 +28,7 @@
     <title>Summary</title>
 </head>
 <body>
-    <% if (message) { %>
+    <% if (locals.message) { %>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
             <h2><%= message %></h2>
