--- a/views/edit_movie.ejs
+++ b/views/edit_movie.ejs
@@ -48,7 +48,7 @@
         </form>    
 
         <center>
-            <img src="/images/titles/new_movie.png" id="img" width="329" height="113">        
+            <img src="/images/titles/edit_movie.png" id="img" width="329" height="113">        
         </center>     
 
         <form action="" method="POST">
@@ -92,9 +92,11 @@
                 <input type="image" src="/images/icons/mas.png" id="add" width="30" height="30"/>    
                 <input type="image" src="/images/icons/menos.png" id="minus" width="30" height="30"/>    
             </article>
-            <button type="submit" name="add_cart" id="add_cart">Add</button>    
-            <button type="submit" name="modify" id="modify">Modify</button>    
-            <button type="submit" name="delete" id="delete">Delete</button>    
+
+            <button type="submit" id="add_cart" name="add_cart" id="add_cart">Add</button>    
+            <button type="submit" id="modify" name="modify" id="modify">Modify</button>    
+            <button type="submit" id="delete" name="delete" id="delete">Delete</button>    
+
         </form> 
     </div>
 </body>
