--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -5,13 +5,19 @@
     <title>Movies</title>
 </head>
 <body>
-    <form id="header1" name="header1" action="/admin/cart" method="get">
-        <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
-    </form>    
+    <center>
+        <form id="header1" name="header1" action="/admin/cart" method="get">
+            <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
+        </form>    
 
-    <form id="header2" name="header2" action="/logout" method="post">
-        <input type="image" src="/images/icons/exit.png" width="30" height="30" />
-    </form>    
+        <form id="header2" name="header2" action="/movies/search" method="get">
+            <input type="image" src="/images/icons/movie.png" width="30" height="30" />
+        </form>
+
+        <form id="header3" name="header3" action="/logout" method="post">
+            <input type="image" src="/images/icons/exit.png" width="30" height="30" />
+        </form>    
+    </center>
 
     <article id=sideContainer>
         <img src="/images/titles/retro_club.jpg" width="250" height="60"><br>
